# bevy_asset_packer

./: Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
example/: Cargo.toml  build.rs
example/src/: main.rs
src/: asset_bundler.rs  asset_bundling_options.rs  bundled_asset_io.rs  bundled_asset_plugin.rs  compress.rs  crypt.rs  decompress.rs  lib.rs
