[package]
name = "bevy_asset_packer"
authors = ["Dublikunt Max"]
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Easy to use bevy plugin for packing resources in single file and protect him."
homepage = "https://github.com/DublikuntMux/bevy_asset_packer"
repository = "https://github.com/DublikuntMux/bevy_asset_packer"
readme = "README.md"
keywords = ["bevy", "asset", "assets", "asset_manager", "bevy_plugin"]
categories = ["game-development", "game-engines"]
exclude = [
    "example/*",
    ".github/*",
    "rustfmt.toml"
]

[workspace]
resolver = "2"
members = ["example"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.11", default-features = false }

[dependencies]
bevy = { version = "0.11", default-features = false, features = ["bevy_asset"] }
anyhow = "1.0.72"
bs58 = "0.5.0"
tar = "0.4.40"
magic-crypt = "3.1.12"
byteorder = "1.4.3"
