[package]
name = "bevy_asset_packer_example"
authors = ["Dublikunt Max"]
version = "0.1.0"
edition = "2021"
publish = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
bevy_asset_packer = { path = "../" }

[dependencies]
bevy = { workspace = true, default-features = false, features = ["multi-threaded", "bevy_asset", "bevy_winit", "bevy_render", "bevy_sprite", "png"] }
bevy_asset_packer = { path = "../" }
